added get poll by id endpoint
