# src/main.go
@@ -23,6 +23,7 @@ func setupRouter() *gin.Engine {
 	v1.POST("/poll", func(c *gin.Context) {
 		server.CreatePoll(jwtManager, c)
 	})
+	v1.GET("/poll/:id", server.GetPoll)
 	v1.GET("/users/:name", server.UserExists)
 
 	return r
